--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "html-pdf": "^3.0.1",
@@ -15,7 +16,9 @@
     "mysql2": "^3.1.2",
     "net": "^1.0.2",
     "node": "^19.6.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "puppeteer": "^19.7.0",
     "sequelize": "^6.28.0",
     "socket.io": "^4.6.0",
     "typescript": "^4.9.5"
